syntax = "proto3";

option go_package = "github.com/atlarge-research/opendc-emulate-kubernetes/api/apatelet";
package apate.apatelet;

import "google/protobuf/empty.proto";

// This service will run on the Apatelets
service Scenario {

    // Starts a scenario on the current Apatelet
    // This will be called on every Apatelet
    rpc startScenario (ApateletScenario) returns (google.protobuf.Empty) {}
}

// The top level object which defines how the different Apatelet will emulate certain deployments
message ApateletScenario {
    // The absolute timestamp at which the scenario will start
    int64 start_time = 1;
}
